--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/cee-loo-restaurant
 ADMIN_USERNAME=kardashevscale
-ADMIN_PASSWORD=FiVP6JE7td2RUBg
+ADMIN_PASSWORD= :)
 EMAIL_USER=arijitde675@gmail.com
-EMAIL_PASS=FiVP6JE7td2RUBg
+EMAIL_PASS= :) 
 SESSION_SECRET=type1civilization
